[package]
name = "ailake-store"
version = "0.1.0"
edition = "2021"

[dependencies]
ailake-core  = { path = "../ailake-core" }
tokio        = { workspace = true }
bytes        = { workspace = true }
async-trait  = { workspace = true }
thiserror    = { workspace = true }
object_store = { workspace = true }
futures      = { workspace = true }

[features]
default = ["store-local"]
store-local = []
store-s3    = ["object_store/aws"]
store-gcs   = ["object_store/gcp"]
store-azure = ["object_store/azure"]

[dev-dependencies]
tempfile    = { workspace = true }
tokio       = { workspace = true }
