[package]
name        = "ailake-store"
version = "0.0.27"
edition     = "2021"
description = "Unified object storage abstraction (S3, GCS, Azure, local) for AI-Lake"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/ThiagoLange/ai-lakehouse"
keywords    = ["s3", "gcs", "azure", "object-storage", "lakehouse"]
categories  = ["filesystem", "database", "network-programming"]

[dependencies]
ailake-core  = { path = "../ailake-core", version = "0.0.27" }
tokio        = { workspace = true }
bytes        = { workspace = true }
async-trait  = { workspace = true }
thiserror    = { workspace = true }
object_store = { workspace = true }
futures      = { workspace = true }

[features]
default = ["store-local"]
store-local = []
store-s3    = ["object_store/aws"]
store-gcs   = ["object_store/gcp"]
store-azure = ["object_store/azure"]

[dev-dependencies]
tempfile    = { workspace = true }
tokio       = { workspace = true }
