[package]
name = "ailake-vec"
version = "0.0.5"
edition = "2021"

[dependencies]
ailake-core = { path = "../ailake-core" }
half        = { workspace = true }
lz4_flex    = { workspace = true }
zstd        = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }

[dev-dependencies]
proptest    = { workspace = true }
rand        = { workspace = true }
