[package]
name        = "ailake-vec"
version     = "0.0.7"
edition     = "2021"
description = "Vector quantization (F32/F16/I8/PQ) and SIMD distance kernels for AI-Lake"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/ThiagoLange/iceberg-ai-deltalakehouse"
keywords    = ["vector", "simd", "quantization", "embedding", "distance"]
categories  = ["algorithms", "data-structures", "science"]

[dependencies]
ailake-core = { path = "../ailake-core", version     = "0.0.7" }
half        = { workspace = true }
lz4_flex    = { workspace = true }
zstd        = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }

[dev-dependencies]
proptest    = { workspace = true }
rand        = { workspace = true }
