[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apache-airflow-providers-ailake"
version = "0.0.10"
description = "Apache Airflow provider for AI-Lake Format — hook, operators, and snapshot sensor"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Thiago Egon Lange", email = "thiago.egon@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "apache-airflow>=2.6",
]
keywords = ["airflow", "provider", "ailake", "lakehouse", "iceberg", "vector"]
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Database",
]

[project.urls]
Repository    = "https://github.com/ThiagoLange/ai-lakehouse"
"Bug Tracker" = "https://github.com/ThiagoLange/ai-lakehouse/issues"

[project.entry-points."apache_airflow_provider"]
provider_info = "airflow_providers_ailake:get_provider_info"

[tool.hatch.build.targets.wheel]
packages = ["airflow_providers_ailake"]
