[package]
name = "ailake-tests"
version = "0.1.2"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dev-dependencies]
ailake-catalog = { path = "../ailake-catalog", features = ["catalog-jdbc"] }
ailake-core    = { path = "../ailake-core" }
ailake-query   = { path = "../ailake-query" }
ailake-store   = { path = "../ailake-store" }
ailake-file    = { path = "../ailake-file" }
ailake-fts     = { workspace = true }
arrow-array    = { workspace = true }
arrow-schema   = { workspace = true }
tokio          = { workspace = true, features = ["full"] }
tempfile       = { workspace = true }
serde_json     = { workspace = true }
